--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -25,6 +25,7 @@
                 <outlet property="enterFiveDigitCodeLabel" destination="Aa7-UQ-9QT" id="kTN-6x-LgW"/>
                 <outlet property="enterFourDigitPIN" destination="JfG-pe-WIG" id="1uy-00-dh3"/>
                 <outlet property="reEnterFourDigitPIN" destination="Lq4-PM-TIF" id="GDn-1e-dsa"/>
+                <outlet property="toolBar" destination="yAS-5V-1lB" id="f0s-gQ-57a"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -59,7 +60,7 @@
                                 <constraint firstAttribute="height" constant="40" id="p0G-oz-jq5"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="BSG-8O-Nyd"/>
                             </connections>
@@ -94,7 +95,7 @@
                                 <constraint firstAttribute="height" constant="40" id="wrx-jD-Wft"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="sLM-sd-NOb"/>
                             </connections>
@@ -159,8 +160,20 @@
             </constraints>
             <point key="canvasLocation" x="289" y="96"/>
         </view>
+        <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="yAS-5V-1lB">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+            <items>
+                <barButtonItem title="Done" id="erW-qr-fIi">
+                    <color key="tintColor" red="0.95294117649999999" green="0.68627450980000004" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="toolBarDoneButtonPressed:" destination="-1" id="V1x-42-gnv"/>
+                    </connections>
+                </barButtonItem>
+            </items>
+        </toolbar>
     </objects>
     <resources>
-        <image name="savivo-logo.png" width="80" height="80"/>
+        <image name="savivo-logo.png" width="85" height="85"/>
     </resources>
 </document>
