--- a/Savio/RegistrationViewController/PageView.xib
+++ b/Savio/RegistrationViewController/PageView.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,15 +14,21 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3p1-eM-9bL">
                     <rect key="frame" x="10" y="10" width="580" height="580"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="3p1-eM-9bL" secondAttribute="height" multiplier="1:1" id="3Q8-WM-u9H"/>
+                        <constraint firstAttribute="height" constant="580" id="Soj-mG-TX9"/>
+                        <constraint firstAttribute="width" constant="580" id="fRg-2M-sSb"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="3p1-eM-9bL" secondAttribute="trailing" constant="10" id="85K-gv-4Jc"/>
-                <constraint firstItem="3p1-eM-9bL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="EAV-Wi-1wj"/>
+                <constraint firstItem="3p1-eM-9bL" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="EAV-Wi-1wj"/>
                 <constraint firstItem="3p1-eM-9bL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="emb-ST-fZ2"/>
                 <constraint firstAttribute="bottom" secondItem="3p1-eM-9bL" secondAttribute="bottom" constant="10" id="hSS-ga-NfY"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
+            <point key="canvasLocation" x="302" y="299"/>
         </view>
     </objects>
 </document>
