--- a/Savio/TermsAndConditionView/ImportantInformationView.xib
+++ b/Savio/TermsAndConditionView/ImportantInformationView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Medium.otf">
@@ -25,9 +25,9 @@
                     <rect key="frame" x="10" y="10" width="580" height="580"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pp-S0-ESN">
-                            <rect key="frame" x="10" y="40" width="191" height="21"/>
+                            <rect key="frame" x="10" y="40" width="560" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="191" id="QDP-sM-nfa"/>
+                                <constraint firstAttribute="width" constant="560" id="QDP-sM-nfa"/>
                                 <constraint firstAttribute="height" constant="21" id="WIT-rR-TZp"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
@@ -106,6 +106,7 @@
             </constraints>
             <connections>
                 <outlet property="gotItButton" destination="slp-4J-ir4" id="ZSX-8s-1nK"/>
+                <outlet property="lblHeader" destination="6Pp-S0-ESN" id="tb7-QP-Mir"/>
                 <outlet property="termsAndConditionTextView" destination="RB6-7D-MCA" id="ev3-J2-9Tp"/>
             </connections>
             <point key="canvasLocation" x="379" y="331"/>
