--- a/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
@@ -21,7 +21,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t78-BE-f8p">
-                        <rect key="frame" x="8" y="4" width="304" height="27"/>
+                        <rect key="frame" x="30" y="4" width="260" height="27"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -29,7 +29,7 @@
                         </connections>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJr-dw-1dQ">
-                        <rect key="frame" x="273" y="3" width="30" height="28"/>
+                        <rect key="frame" x="252" y="3" width="30" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="2JH-eZ-LY3"/>
                             <constraint firstAttribute="width" constant="30" id="fas-0V-rPJ"/>
@@ -44,12 +44,12 @@
                 <constraints>
                     <constraint firstItem="CJr-dw-1dQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2mx-Ll-6bz"/>
                     <constraint firstAttribute="bottomMargin" secondItem="t78-BE-f8p" secondAttribute="bottom" constant="-5" id="3Il-Ee-OgW"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="9" id="7sB-hp-AL4"/>
-                    <constraint firstItem="t78-BE-f8p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="7yE-OL-Y21"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="30" id="7sB-hp-AL4"/>
+                    <constraint firstItem="t78-BE-f8p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="22" id="7yE-OL-Y21"/>
                     <constraint firstItem="CJr-dw-1dQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="8q3-Da-yLB"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="9" id="Vwj-ln-2y3"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="30" id="Vwj-ln-2y3"/>
                     <constraint firstItem="t78-BE-f8p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="a0T-fO-4aE"/>
-                    <constraint firstItem="t78-BE-f8p" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vev-aS-ffk"/>
+                    <constraint firstItem="t78-BE-f8p" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-22" id="vev-aS-ffk"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
