--- a/Savio/RegistrationViewController/RegistrationCell/FindAddressTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/FindAddressTableViewCell.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -23,11 +22,9 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3bk-Tq-jGb">
-                        <rect key="frame" x="8" y="4" width="176" height="27"/>
+                        <rect key="frame" x="30" y="2" width="127" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="27" id="0vD-nC-3hI"/>
-                            <constraint firstAttribute="width" secondItem="3bk-Tq-jGb" secondAttribute="height" multiplier="176:27" id="ScX-dF-y1Y"/>
-                            <constraint firstAttribute="width" constant="176" id="ejP-0f-sC9"/>
+                            <constraint firstAttribute="width" constant="127" id="znJ-0O-gSQ"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
@@ -36,13 +33,8 @@
                         </connections>
                     </textField>
                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heI-l4-6Xd">
-                        <rect key="frame" x="192" y="2" width="120" height="30"/>
+                        <rect key="frame" x="170" y="2" width="120" height="29"/>
                         <color key="backgroundColor" red="1" green="0.64705882349999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="heI-l4-6Xd" secondAttribute="height" multiplier="4:1" id="B7U-zj-MXI"/>
-                            <constraint firstAttribute="width" constant="120" id="qmU-22-BCF"/>
-                            <constraint firstAttribute="height" constant="30" id="znF-YO-O5f"/>
-                        </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                         <state key="normal" title="Find Address">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -53,13 +45,13 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="3bk-Tq-jGb" secondAttribute="bottom" constant="-5" id="12M-t0-PmI"/>
-                    <constraint firstItem="heI-l4-6Xd" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="5lb-k9-xGi"/>
-                    <constraint firstItem="heI-l4-6Xd" firstAttribute="leading" secondItem="3bk-Tq-jGb" secondAttribute="trailing" constant="8" id="B5z-fM-TEa"/>
-                    <constraint firstItem="3bk-Tq-jGb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="Qwf-Xa-fmn"/>
-                    <constraint firstItem="heI-l4-6Xd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="UTe-Q8-LU5"/>
-                    <constraint firstItem="3bk-Tq-jGb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="dOz-5L-Ms1"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="heI-l4-6Xd" secondAttribute="bottom" constant="-6" id="dxx-0t-OfC"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="heI-l4-6Xd" secondAttribute="bottom" constant="-5" id="Hsi-Ss-hOf"/>
+                    <constraint firstItem="heI-l4-6Xd" firstAttribute="leading" secondItem="3bk-Tq-jGb" secondAttribute="trailing" constant="13" id="KDl-0e-aIY"/>
+                    <constraint firstItem="3bk-Tq-jGb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="22" id="UPw-Ki-1xf"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3bk-Tq-jGb" secondAttribute="bottom" constant="-6" id="Wp0-4h-8By"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="heI-l4-6Xd" secondAttribute="trailing" constant="22" id="aA0-yD-4rX"/>
+                    <constraint firstItem="3bk-Tq-jGb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="kHV-6g-sFw"/>
+                    <constraint firstItem="heI-l4-6Xd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="qva-YM-D2x"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
