--- a/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
@@ -23,7 +23,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DSe-vs-hRB">
-                        <rect key="frame" x="8" y="4" width="90" height="27"/>
+                        <rect key="frame" x="30" y="4" width="90" height="27"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="90" id="YP6-EX-4GO"/>
                             <constraint firstAttribute="width" secondItem="DSe-vs-hRB" secondAttribute="height" multiplier="10:3" id="mZI-Y9-PbA"/>
@@ -36,12 +36,7 @@
                         </connections>
                     </textField>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bcP-nc-8gY">
-                        <rect key="frame" x="102" y="4" width="210" height="27"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="210" id="aaY-e2-zK6"/>
-                            <constraint firstAttribute="height" constant="27" id="bcf-FO-FlU"/>
-                            <constraint firstAttribute="width" secondItem="bcP-nc-8gY" secondAttribute="height" multiplier="70:9" id="hIF-GW-AGY"/>
-                        </constraints>
+                        <rect key="frame" x="124" y="4" width="166" height="27"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -49,7 +44,7 @@
                         </connections>
                     </textField>
                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yms-xY-RA2">
-                        <rect key="frame" x="75" y="8" width="20" height="20"/>
+                        <rect key="frame" x="97" y="8" width="20" height="20"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="DQf-Jq-1jc"/>
@@ -63,15 +58,15 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bcP-nc-8gY" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="41y-Uj-sKA"/>
                     <constraint firstItem="DSe-vs-hRB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="IVz-6l-YY8"/>
-                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="DSe-vs-hRB" secondAttribute="trailing" constant="4" id="JkE-Vl-8lK"/>
-                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="yms-xY-RA2" secondAttribute="trailing" constant="7" id="Wjs-V3-yfg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="bcP-nc-8gY" secondAttribute="bottom" constant="-5" id="Pr4-00-2qG"/>
+                    <constraint firstItem="bcP-nc-8gY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="WQy-ew-vMY"/>
                     <constraint firstAttribute="bottomMargin" secondItem="DSe-vs-hRB" secondAttribute="bottom" constant="-5" id="cqY-sO-pHL"/>
-                    <constraint firstItem="bcP-nc-8gY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="fuh-Us-uvR"/>
+                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="DSe-vs-hRB" secondAttribute="trailing" constant="4" id="cxK-AV-R51"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="bcP-nc-8gY" secondAttribute="trailing" constant="22" id="g9R-LJ-WNN"/>
+                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="yms-xY-RA2" secondAttribute="trailing" constant="7" id="jLA-F8-oDb"/>
                     <constraint firstItem="yms-xY-RA2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="lpT-pO-eCH"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="bcP-nc-8gY" secondAttribute="bottom" constant="-5" id="nGW-o1-KPt"/>
-                    <constraint firstItem="DSe-vs-hRB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="zGV-1a-o2s"/>
+                    <constraint firstItem="DSe-vs-hRB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="22" id="zGV-1a-o2s"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
