--- a/Savio/RegistrationViewController/RegistrationCell/TxtFieldTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/TxtFieldTableViewCell.xib
@@ -13,15 +13,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="33" id="KGk-i7-Jjw" customClass="TxtFieldTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="TxtFieldTableViewCell" customModule="Savio" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="32"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ex9-nW-iG7">
-                        <rect key="frame" x="8" y="3" width="304" height="27"/>
+                        <rect key="frame" x="30" y="3" width="260" height="44"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -32,14 +32,14 @@
                 <constraints>
                     <constraint firstItem="Ex9-nW-iG7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="B3a-IL-Zs2"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Ex9-nW-iG7" secondAttribute="bottom" constant="-6" id="D2S-zU-DlI"/>
-                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="fDU-pZ-gIe"/>
-                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="uUM-G4-yOE"/>
+                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-22" id="fDU-pZ-gIe"/>
+                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="22" id="uUM-G4-yOE"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="tf" destination="Ex9-nW-iG7" id="AIR-7T-FyY"/>
             </connections>
-            <point key="canvasLocation" x="252" y="266.5"/>
+            <point key="canvasLocation" x="252" y="269.5"/>
         </tableViewCell>
     </objects>
 </document>
