--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -53,7 +53,7 @@
                         <constraint firstAttribute="height" constant="40" id="08N-L0-BdL"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="uor-O1-450"/>
                     </connections>
