--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -48,7 +48,7 @@
                     </constraints>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ajo-fL-EaP">
-                    <rect key="frame" x="30" y="141" width="540" height="40"/>
+                    <rect key="frame" x="30" y="197" width="540" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="08N-L0-BdL"/>
                     </constraints>
@@ -59,7 +59,7 @@
                     </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLD-AK-Fy3">
-                    <rect key="frame" x="30" y="198" width="540" height="40"/>
+                    <rect key="frame" x="30" y="260" width="540" height="40"/>
                     <color key="backgroundColor" red="0.36470588235294116" green="0.37254901960784315" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="pXm-hI-fNG"/>
@@ -73,7 +73,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YRO-Ha-Z4h">
-                    <rect key="frame" x="215" y="254" width="170" height="30"/>
+                    <rect key="frame" x="215" y="310" width="170" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="9jI-6B-tZ0"/>
                         <constraint firstAttribute="width" constant="170" id="iBZ-kK-QZU"/>
@@ -108,7 +108,7 @@
                     </connections>
                 </button>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your passcode does't match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hME-bb-vkK">
-                    <rect key="frame" x="180" y="110" width="240" height="21"/>
+                    <rect key="frame" x="180" y="140" width="240" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="Kbb-PM-Wbn"/>
                         <constraint firstAttribute="width" constant="240" id="WGz-Ev-9fj"/>
@@ -169,22 +169,22 @@
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Nnp-5x-fI1"/>
                 <constraint firstItem="oLD-AK-Fy3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Val-6v-2xL"/>
                 <constraint firstItem="hME-bb-vkK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aCg-D1-9Au"/>
-                <constraint firstItem="oLD-AK-Fy3" firstAttribute="top" secondItem="ajo-fL-EaP" secondAttribute="bottom" constant="17" id="bdZ-0f-Nfb"/>
+                <constraint firstItem="oLD-AK-Fy3" firstAttribute="top" secondItem="ajo-fL-EaP" secondAttribute="bottom" constant="23" id="bdZ-0f-Nfb"/>
                 <constraint firstItem="ajo-fL-EaP" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="hMl-Jz-hUe"/>
-                <constraint firstItem="1ng-Ts-N3O" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="87" id="hZ3-0N-1sh"/>
-                <constraint firstItem="ajo-fL-EaP" firstAttribute="top" secondItem="hME-bb-vkK" secondAttribute="bottom" constant="10" id="k1Y-bE-ood"/>
+                <constraint firstItem="1ng-Ts-N3O" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="31" id="hZ3-0N-1sh"/>
+                <constraint firstItem="ajo-fL-EaP" firstAttribute="top" secondItem="hME-bb-vkK" secondAttribute="bottom" constant="36" id="k1Y-bE-ood"/>
                 <constraint firstItem="uH3-CJ-3vG" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="5" id="kAa-ix-lHM"/>
                 <constraint firstItem="OTi-RR-xfC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="mL8-rd-Seu"/>
                 <constraint firstAttribute="trailing" secondItem="1ng-Ts-N3O" secondAttribute="trailing" constant="30" id="n2S-k8-Sao"/>
                 <constraint firstItem="yO2-Dv-Fci" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="o1g-d8-2Ar"/>
-                <constraint firstItem="hME-bb-vkK" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" id="pZQ-uC-9dh"/>
+                <constraint firstItem="hME-bb-vkK" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="30" id="pZQ-uC-9dh"/>
                 <constraint firstItem="WBk-LD-bTU" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pun-GM-lA0"/>
                 <constraint firstAttribute="trailing" secondItem="ajo-fL-EaP" secondAttribute="trailing" constant="30" id="stw-AA-zMX"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tWp-PJ-8uI"/>
                 <constraint firstItem="OTi-RR-xfC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="0.5" id="tkS-2e-Ms8"/>
-                <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="22" id="wVQ-8J-Vmk"/>
+                <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="-34" id="wVQ-8J-Vmk"/>
                 <constraint firstItem="oLD-AK-Fy3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wpY-h4-ACF"/>
-                <constraint firstItem="YRO-Ha-Z4h" firstAttribute="top" secondItem="oLD-AK-Fy3" secondAttribute="bottom" constant="16" id="zIW-82-qsR"/>
+                <constraint firstItem="YRO-Ha-Z4h" firstAttribute="top" secondItem="oLD-AK-Fy3" secondAttribute="bottom" constant="10" id="zIW-82-qsR"/>
             </constraints>
             <point key="canvasLocation" x="611" y="267"/>
         </view>
